test/compile_errors/lib/visibility/private_surface.w
fn private_fn -> i32:
    1

type PrivateType {
    value: i32,
}

const PRIVATE_CONST = 2

global PRIVATE_GLOBAL = 3

